--- a/guifw/templates/ruleview.html
+++ b/guifw/templates/ruleview.html
@@ -26,4 +26,10 @@
             <li>{{ rule }}</li>
         {% endfor %}
     </ul>
+    <h2>Shapping List</h2>
+    <ul>
+         {% for shapp in shapping %}
+            <li>{{ shapp }}</li>
+        {% endfor %}
+    </ul>
 {% endblock %}
