--- a/guifw/templates/shapping_delete.html
+++ b/guifw/templates/shapping_delete.html
@@ -2,14 +2,14 @@
 
 {% block content %}
 
-<div class="modal-body">
-	<h2> <span class="label label-danger">Really delete {{ object.name }}?</span></h2>
-	<p>  The register will be deleted. There is no undo! </p>
+<div class="modal-body" align="center">
+	<h1><span class="label label-danger">Really delete the {{ object.name }} rule?</span></h1>
+	<h3><p>This will delete the register. There is no undo!</p></h3>
 	<form action="" method="post">
 		{% csrf_token %}
-		<Button name="submit" type="submit" class="btn btn-danger btn-default">
+		<Button name="submit" type="submit" class="btn btn-danger">
 			<span class="glyphicon glyphicon-trash"></span>Delete</button>
-		<Button name="cancel" type="cancel" value="cancel" class="btn btn-info btn-default">
+		<Button name="cancel" type="cancel" value="cancel" class="btn btn-success">
 			<span class="glyphicon glyphicon-remove"></span>Cancel</button>
 	</form>
 </div>
