--- a/guifw/templates/shappclass_list.html
+++ b/guifw/templates/shappclass_list.html
@@ -18,6 +18,7 @@
     <thead>
     <tr>
         <th><input type="checkbox" class="checkall" onclick="toggleChecked(this.checked)"/></th>
+        <th>Ord</th>
         <th>Name</th>
         <th>Flow ID</th>
         <th>Parent</th>
