--- a/guifw/templates/shapping_list.html
+++ b/guifw/templates/shapping_list.html
@@ -18,6 +18,7 @@
     <thead>
     <tr>
         <th><input type="checkbox" class="checkall" onclick="toggleChecked(this.checked)"/></th>
+        <th>Order</th>
         <th>Name</th>
         <th>Class</th>
         <th>Parent</th>
@@ -32,6 +33,15 @@
     {% for shapping in object_list %}
     <tr >
         <td><input type="checkbox" value={{ shapping.id }} class="checkbox"/></td>
+        <td><a href="{% url 'shapping-reorderdown' order_id=shapping.order %}">
+                <button type="button" class="btn btn-principal btn-xs" data-toggle="tooltip" title="Down">
+                    <span class="glyphicon glyphicon-chevron-down"></span></button>
+            </a>
+            <a href="{% url 'shapping-reorderup' order_id=shapping.order %}">
+                <button type="button" class="btn btn-principal btn-xs" data-toggle="tooltip" title="Up">
+                    <span class="glyphicon glyphicon-chevron-up"></span></button>
+            </a>&nbsp
+            {{ shapping.order }}</td>
         <td>{{ shapping.name }}</td>
         <td>{{ shapping.shappclass }}</td>
         <td>{% if shapping.parent %} {{ shapping.parent }} {% endif%}</td>
