--- a/guifw/templates/base.html
+++ b/guifw/templates/base.html
@@ -103,6 +103,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">System
                             <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
+                            <li><a href="{% url 'setting-detail' 1 %}">Settings</a></li>
                             <li><a href="{% url 'audit' %}">Log Audit</a></li>
                             <li class="divider"></li>
                             <li><a href="{% url 'processes' %}">Processes</a></li>
