--- a/guifw/templates/port_delete.html
+++ b/guifw/templates/port_delete.html
@@ -3,15 +3,80 @@
 {% block content %}
 
 <div class="modal-body">
-	<h2> <span class="label label-danger">Really delete {{ object.name }}?</span></h2>
-	<p>  The register will be deleted. There is no undo! </p>
-	<form action="" method="post">
-		{% csrf_token %}
-		<Button name="submit" type="submit" class="btn btn-danger btn-default">
-			<span class="glyphicon glyphicon-trash"></span>Delete</button>
-		<Button name="cancel" type="cancel" value="cancel" class="btn btn-info btn-default">
-			<span class="glyphicon glyphicon-remove"></span>Cancel</button>
-	</form>
-</div>
+    <h2> Really delete {{ object.name }}?</h2>
 
+    <p> The register will be deleted. There is no undo! </p>
+
+    <form action="" method="post">
+        {% csrf_token %}
+        <Button name="submit" type="submit" class="btn btn-danger btn-default">
+            <span class="glyphicon glyphicon-trash"></span>Delete
+        </button>
+        <Button name="cancel" type="cancel" value="cancel" class="btn btn-info btn-default">
+            <span class="glyphicon glyphicon-remove"></span>Cancel
+        </button>
+    </form>
+</div>
+<div class="modal-body">
+    {%if used %}
+    <h3> Where this object is still used: </h3>
+    <table id="datatable" class="display table">
+        <thead>
+        <tr>
+            <th>Object</th>
+            <th>Order</th>
+            <th>Name</th>
+            <th>Position</th>
+            <th>View</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for rule in used %}
+        <tr>
+            <td>{{ rule.0 }}</td>
+            <td>{{ rule.2 }}</td>
+            <td>{{ rule.3 }}</td>
+            <td>{{ rule.1 }}</td>
+            <td>
+                <a href="/guifw/{{ rule.0 }}/edit/{{ rule.4 }}">
+                    <button type="button" class="btn btn-warning btn-xs" data-toggle="tooltip" title="Edit">
+                        <span class="glyphicon glyphicon-edit"></span></button>
+                </a>
+            </td>
+        </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+</div>
+{% endif %}
+
+<script type="text/javascript">
+
+    $(document).ready(function(){
+        var table=$('#datatable').DataTable({
+            "lengthMenu": [ [10, 25, 50, -1], [10, 25, 50, "All"] ] ,
+            "pageLength": 50,
+        });
+
+        $('a.toggle-vis').on( 'click', function (e) {
+            e.preventDefault();
+
+            // Get the column API object
+            var column = table.column( $(this).attr('data-column') );
+
+            // Toggle the visibility
+            column.visible( ! column.visible() );
+        } );
+    });
+
+    function toggleChecked(status) {
+      $(".checkbox").each( function() {
+        $(this).prop("checked",status);
+      })
+
+
+    }
+
+
+</script>
 {% endblock %}
