--- a/guifw/templates/setting_detail.html
+++ b/guifw/templates/setting_detail.html
@@ -6,8 +6,11 @@
 </div>
 <div class="modal-body">
 	<dl>
-		 <dt>Readable Rules: {{ object.readable_rules }}</dt>
-		 <dt>Restore Rules: {{ object.restore_rules }}</dt>
+		 <dt>Generate Readable Rules: {{ object.readable_rules }}</dt>
+		 <dt>Generate Restorable Rules: {{ object.restore_rules }}</dt>
+		 <dt>Generate NAT Rules: {{ object.nat_rules }}</dt>
+		 <dt>Generate Shapping Rules: {{ object.shapping_rules }}</dt>
+		 <dt>Create DNS Cache: {{ object.create_dns_cache }}</dt>
 		 <dt>Save Path: {{ object.save_path }} </dt>
 		 <dt>Pre Rules: </dt>
 		 <dd><pre>{{ object.prerule }}</pre></dd>
